--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
     "mongoose": "^8.19.1",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10"
   }
 }
